main.css
html,
body {
  max-width: 800px;
  margin: 0 auto;
  font-family: sans, sans-serif;
}

a {
  text-decoration: none;
}

nav {
  background-color: #e52567;
  font-size: large;
}

nav > a {
  margin: 0 20px;
  color: white;
  text-align: center;
  text-decoration: none;
}

button {
  color: white;
  font-weight: bold;
  width: 140px;
  padding: 11px 16px;
  background-color: black;
  border: 1px solid gray;
  border-radius: 6px;
}

.banner {
  width: 100%;
  max-width: 800px;
}

.search {
  flex: center;
  align-content: space-between;
}

section.main {
  margin: 0 20px;
  display: flex;
  justify-content: space-around;
}

#list {
  margin: 0 60px;
}

desc {
  margin-left: 120px;
  display: block;
}

img.recipe {
  width: 100px;
  float: left;
}

